<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e3e3e3"
    android:id="@+id/registration_activity_ui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationActivity"
    android:orientation="vertical">

    <!-- Text/Logo -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/text_registration"
            android:textSize="30sp"
            android:textColor="@color/colorLoginText"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">


        <!--EMAIL-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>


        <!--PASSWORD-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>

        </android.support.design.widget.TextInputLayout>

        <!--PASSWORD AGAIN-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password"/>

        </android.support.design.widget.TextInputLayout>

        <!--SIGN UP BUTTON-->
        <Button
            android:id="@+id/button_register"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:text='@string/btn_register'/>


    </LinearLayout>

</LinearLayout>