<resources>
    <string name="app_name">SoundMeter</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="btn_register">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_password_forget">Forgot password?</string>
    <string name="btn_link_to_register">Don\'t Have an Account?</string>
    <string name="text_login">Welcome</string>
    <string name="text_registration">Create new account</string>
    <string name="error_input_email">Invalid email address</string>
</resources>
